2006-09-20  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/tie-engraver.cc (process_music): also set tieMelismaBusy if
	event_ detected.

	* scm/script.scm (default-script-alist): avoid-slur and
	slur-padding for portato script.

	* lily/stem-tremolo.cc (translated_stencil): new function. 
	(height): use new function. Fixes tremolos on whole notes.

	* lily/slur-scoring.cc (get_best_curve): don't crash if no optimal
	slur found.

2006-09-19  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scripts/abc2ly.py (try_parse_comment): idem.

	* scripts/lilypond-book.py (find_toplevel_snippets): use 'foo' in
	bar_string iso. string.find()

	* lily/*.cc: idem.

	* lily/slur.cc (get_curve): always use scm_is_pair() looping
	scheme lists.  

2006-09-18  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/basic-notation.itely: add bug
	warning about ties and octavation/clef.

2006-09-18  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* VERSION (PACKAGE_NAME): release 2.9.18

2006-08-29  Milan Zamazal  <pdm@brailcom.org>

	* elisp/lilypond-mode.el (LilyPond-command-alist): Don't try to
	figure out midi file names right here.
	
2006-09-17  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scm/framework-ps.scm (dump-stencil-as-EPS): naming pad-eps-boxes.

	* scm/backend-library.scm: option naming:  gs-font-load*s*

	* scm/framework-eps.scm (dump-stencils-as-EPSes): rename option to
	include-eps-fonts

2006-09-17  Joe Neeman  <joeneeman@gmail.com>

	* scm/define-music-types.scm (music-descriptions): remove
	BreakEvent and fix {Page,Line}{Break,Turn}Event so
	Music::to_event doesn't complain.

	* lily/accidental-placement.cc (ape_compare):
	* lily/semi-tie.cc (compare): 
	* lily/note-column.cc (shift_compare): replace by XXX_less

	* lily/tie-formatting-problem.cc (set_chord_outline): 
	* lily/tie-column.cc (calc_positioning_done): 
	* lily/system.cc (post_processing)
	(get_paper_system): 
	* lily/stem.cc (note_head_positions)
	(calc_positioning_done): 