@@ -264,7 +264,7 @@ Page_breaking::find_chunks_and_breaks (Break_predicate is_break)
 	  vector<vsize> line_breaker_columns;
 	  line_breaker_columns.push_back (0);
 
-	  for (vsize j = 0; j < cols.size (); j++)
+	  for (vsize j = 1; j < cols.size (); j++)
 	    {
 	      bool last = j == cols.size () - 1;
 	      bool break_point = is_break (cols[j]);
